Rest of the techs. Checkboxes for options

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
-
+<head>
+	<title>Space Empires Production Sheet</title>
+</head>
 <style>
 	body {
 		font-family: sans-serif;
@@ -11,6 +14,17 @@
 		padding: 0;
 		text-align: center;
 		font-size: 150%;
+	}
+
+	h2{
+		font-style: italic;
+		margin: 0.5em 0 0 0;
+		padding: 0;
+		font-size: 110%;
+	}
+
+	li {
+
 	}
 
 	table {
@@ -31,14 +45,13 @@
 		font-weight: normal;
 		font-size: 66%;
 	}
+
 	th.rotate{
 		max-width: 1em;
 		padding: 0 0.1em;
 		transform: translate(0, 1.5em) rotate(270deg);
 		border: none;
 	}
-
-
 
 	th.phase { 
 		width: 3em;
@@ -55,8 +68,57 @@
 		margin-right: 0.5em;
 	}
 
+	.miners{
+		font-weight: normal;
+		margin-left: 1em;
+		font-size: 66%;
+	}
+
 </style>
 <body>
+	<h1>Select advanced and optional rules</h1>
+
+	<h2>Page setup</h2>
+
+	<ul>
+		<li>
+			<input type="radio">Portrait
+			<input type="radio">Landscape
+		</li>
+		<li>Economic Phase columns: <input type="text"></li>
+	</ul>
+
+	<h2>Base game</h2>
+
+	<ul>
+		<li><input type="checkbox">11. Carriers, Fighters &amp; Point Defense</li>
+		<li><input type="checkbox">12. Raiders: Cloaking and
+Scanners</li>
+		<li><input type="checkbox">13. Mines and Mine Sweepers</li>
+	</ul>
+
+	<h2>Close Encounters</h2>
+
+	<ul>
+		<li><input type="checkbox">3. Ship Experience and Military
+Academies</li>
+		<li><input type="checkbox">4. Boarding and Capturing Ships</li>
+		<li><input type="checkbox">5. Security Forces</li>
+		<li><input type="checkbox">6. Titans</li>
+		<li><input type="checkbox">8. Mine Sweeper Technology</li>
+		<li><input type="checkbox">9. Movement Technology</li>
+		<li><input type="checkbox">10. Reaction Movement</li>
+		<li><input type="checkbox">11. Fast Battlecruisers</li>
+		<li><input type="checkbox">14. Transports and Ground Combat</li>
+		<li><input type="checkbox">16. Flagships</li>
+		<li><input type="checkbox">17. Research and Industrial Centers</li>
+		<li><input type="checkbox">18. Terraforming Nebulae</li>
+		<li><input type="checkbox">19. Unique Ships</li>
+		<li><input type="checkbox">20. Slow Scientists</li>
+		<li><input type="checkbox">20. Smart Scientists</li>
+		<li><input type="checkbox">20. Bloody Combat</li>
+	</ul>
+
 	<h1>Space Empires Production Sheet</h1>
 	<table >
 		<tr>
@@ -216,19 +278,110 @@
 			</td>
 		</tr>
 		<tr>
-			<td></td>
-			<td>0</td>
-			<td></td>
+			<td>Ship Yard</td>
+			<td>1</td>
+			<td>
+				<span class="tech-cost">2<sub>20</sub></span>
+				<span class="tech-cost">3<sub>30</sub></span>
+			</td>
 		</tr>
 		<tr>
-			<td></td>
-			<td>0</td>
-			<td></td>
+			<td>Ground</td>
+			<td>1</td>
+			<td>
+				<span class="tech-cost">2<sub>10</sub></span>
+				<span class="tech-cost">3<sub>15</sub></span>
+			</td>
 		</tr>
 		<tr>
-			<td></td>
+			<td>Fighters</td>
 			<td>0</td>
-			<td></td>
+			<td>
+				<span class="tech-cost">1<sub>25</sub></span>
+				<span class="tech-cost">2<sub>30</sub></span>
+				<span class="tech-cost">3<sub>40</sub></span>
+			</td>
+		</tr>
+		<tr>
+			<td>Point Def.</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>20</sub></span>
+				<span class="tech-cost">2<sub>25</sub></span>
+				<span class="tech-cost">3<sub>30</sub></span>
+			</td>
+		</tr>
+		<tr>
+			<td>Terraforming</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>20</sub></span>
+				<span class="tech-cost">2<sub>35</sub></span>
+				<span class="miners">1 2 3 4</span>
+			</td>
+		</tr>
+		<tr>
+			<td>Cloaking</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>30</sub></span>
+				<span class="tech-cost">2<sub>40</sub></span>
+			</td>
+		</tr>
+		<tr>
+			<td>Scanners</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>20</sub></span>
+				<span class="tech-cost">2<sub>30</sub></span>
+			</td>
+		</tr>
+		<tr>
+			<td>Mines</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>30</sub></span>
+			</td>
+		</tr>
+		<tr>
+			<td>Mine Sweeper</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>10</sub></span>
+				<span class="tech-cost">2<sub>15</sub></span>
+				<span class="tech-cost">3<sub>20</sub></span>
+			</td>
+		</tr>
+		<tr>
+			<td>Military Acad.</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>10</sub></span>
+				<span class="tech-cost">2<sub>20</sub></span>
+			</td>
+		</tr>
+		<tr>
+			<td>Boarding</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>20</sub></span>
+				<span class="tech-cost">2<sub>25</sub></span>
+			</td>
+		</tr>
+		<tr>
+			<td>Security</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>15</sub></span>
+				<span class="tech-cost">2<sub>15</sub></span>
+			</td>
+		</tr>
+		<tr>
+			<td>Fast BC</td>
+			<td>0</td>
+			<td>
+				<span class="tech-cost">1<sub>10</sub></span>
+			</td>
 		</tr>
 	</table>
 
