Fixed encoding etc.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Space Empires Production Sheet</title>
-</head>
-<style>
+	<meta charset="utf-8"/>
+
+
+<style type="text/css">
 	body {
 		font-family: sans-serif;
 	}
@@ -75,6 +77,7 @@
 	}
 
 </style>
+</head>
 <body>
 	<h1>Select advanced and optional rules</h1>
 
